Reduced the json to pass to variableStepValue
Now only the algorithm part of the mm.json should be passed.