@@ -1,7 +1,9 @@
 package org.intocps.maestro.interpreter.values.variablestep;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonMappingException;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.commons.text.StringEscapeUtils;
 import org.intocps.fmi.IFmiComponent;
@@ -32,10 +34,10 @@ public class VariableStepValue extends ModuleValue {
     }
 
 
-    private static Set<InitializationMsgJson.Constraint> getConstraintsFromConfig(InitializationMsgJson config) {
+    private static Set<InitializationMsgJson.Constraint> getConstraintsFromConfig(JsonNode config) {
         final Set<InitializationMsgJson.Constraint> constraints = new HashSet<>();
-        Object constraintValues = config.algorithm.get("constraints");
-        Map<String, Map<String, Object>> namedConstraints = (Map<String, Map<String, Object>>) constraintValues;
+        Map<String, Map<String, Object>> namedConstraints = (new ObjectMapper()).convertValue(config.get("constraints"), new TypeReference<>() {
+        });
 
         for (Map.Entry<String, Map<String, Object>> entry : namedConstraints.entrySet()) {
             final InitializationMsgJson.Constraint constraint = InitializationMsgJson.Constraint.parse(entry.getValue());
@@ -45,28 +47,30 @@ public class VariableStepValue extends ModuleValue {
         return constraints;
     }
 
-    private static StepsizeInterval getStepSizeIntervalFromConfig(InitializationMsgJson config) {
-        List<Double> size = new Vector<>();
-        Object objSize = config.algorithm.get("size");
-        for (Object number : (List<Object>) objSize) {
-            if (number instanceof Integer) {
-                number = new Double((Integer) number);
-            }
+    private static StepsizeInterval getStepSizeIntervalFromConfig(JsonNode config) {
+        List<Double> sizes = new Vector<>();
+        List<Object> objSizes = (new ObjectMapper()).convertValue(config.get("size"), new TypeReference<>() {
+        });
 
-            if (number instanceof Double) {
-                size.add((Double) number);
+        for (Object number : objSizes) {
+            if (number instanceof Integer) {
+                sizes.add(Double.valueOf((Integer) number));
+            } else if (number instanceof Double) {
+                sizes.add((Double) number);
             }
         }
-        return new StepsizeInterval(size.get(0), size.get(1));
+        return new StepsizeInterval(sizes.get(0), sizes.get(1));
     }
 
-    private static Double getInitSizeFromConfig(InitializationMsgJson config) {
+    private static Double getInitSizeFromConfig(JsonNode config) {
         Double initsize = -1.0;
-        Object objInitsize = config.algorithm.get("initsize");
+        Object objInitsize = (new ObjectMapper()).convertValue(config.get("initsize"), new TypeReference<>() {
+        });
+
         if (objInitsize instanceof Double) {
             initsize = (Double) objInitsize;
         } else if (objInitsize instanceof Integer) {
-            initsize = new Double((Integer) objInitsize);
+            initsize = Double.valueOf((Integer) objInitsize);
         }
         return initsize;
     }
@@ -74,43 +78,42 @@ public class VariableStepValue extends ModuleValue {
     /**
      * Values passed in addDataPoint is assumed to follow the same order as the portNames passed in initializePortNames.
      *
-     * @param configAsUriOrJson
+     * @param algorithmAsUriOrJson
      * @return
      */
-    private static Map<String, Value> createMembers(String configAsUriOrJson) {
+    private static Map<String, Value> createMembers(String algorithmAsUriOrJson) {
         Set<InitializationMsgJson.Constraint> constraints;
         StepsizeInterval stepsizeInterval;
         Double initSize;
 
         // Try to generate config from uri
-        InitializationMsgJson config = null;
+        JsonNode config = null;
         try {
-            URI pathAsUri = URI.create((new URI(configAsUriOrJson)).getRawPath());
+            URI pathAsUri = URI.create((new URI(algorithmAsUriOrJson)).getRawPath());
             if (!pathAsUri.isAbsolute()) {
                 pathAsUri = (new File(".")).toURI().resolve(pathAsUri);
             }
-            config = (new ObjectMapper()).readValue(new String(Files.readAllBytes(Paths.get(pathAsUri))), InitializationMsgJson.class);
+            config = (new ObjectMapper()).readTree(new String(Files.readAllBytes(Paths.get(pathAsUri))));
         } catch (URISyntaxException | IOException e) {
-            if(e instanceof IOException){
+            if (e instanceof IOException) {
                 throw new InterpreterException("Configuration could not be passed", e);
             }
         }
 
         // Try to generate config from json
-        if(config == null){
+        if (config == null) {
             try {
-                config = (new ObjectMapper()).readValue(StringEscapeUtils.unescapeJava(configAsUriOrJson), InitializationMsgJson.class);
+                config = (new ObjectMapper()).readTree(StringEscapeUtils.unescapeJava(algorithmAsUriOrJson));
             } catch (JsonProcessingException e) {
                 throw new InterpreterException("Configuration could not be passed", e);
             }
         }
 
-        if(config != null){
+        if (config != null) {
             constraints = getConstraintsFromConfig(config);
             stepsizeInterval = getStepSizeIntervalFromConfig(config);
             initSize = getInitSizeFromConfig(config);
-        }
-        else{
+        } else {
             throw new InterpreterException("Configuration could not be passed");
         }
 
@@ -124,7 +127,8 @@ public class VariableStepValue extends ModuleValue {
                 Map<ModelConnection.ModelInstance, FmiSimulationInstance> instances = new HashMap<>();
 
                 for (int i = 0; i < fullyQualifiedFMUInstanceNames.size(); i++) {
-                    String instanceName = fullyQualifiedFMUInstanceNames.get(i).getValue().split("\\.")[1]; //TODO: This should probably be done in another way
+                    String instanceName =
+                            fullyQualifiedFMUInstanceNames.get(i).getValue().split("\\.")[1]; //TODO: This should probably be done in another way
                     String fmuName = fullyQualifiedFMUInstanceNames.get(i).getValue().split("\\.")[0];
                     ModelConnection.ModelInstance mi = new ModelConnection.ModelInstance(fmuName, instanceName);
                     IFmiComponent fmu = fmus.get(i).getModule();
